syntax = "proto3";
package tutorial;

option go_package = "./MessagePackage";

message TCPMessage {
  MsgType Type = 1;
  string fileInfo=2;
  string senderIP = 3;
  repeated string PayLoad =4;
  int fileSize = 5;

}

enum MsgType {
  PUT_MASTER = 0;  // Put request send to master
  PUT_MASTER_REP = 1; // Master reply to put request, send back target ip
  PUT_P2P = 2; // Put request send to target ip
  PUT_P2P_ACK = 3; // Target ip get the file header successfully and send back ack, once this is received, start sending file
  GET_MASTER = 4;  // Get request send to master
  GET_MASTER_REP = 5; // Master reply to get request, send back target ip
  GET_P2P = 6; // Get request send to target ip
  GET_P2P_ACK = 7; // Target ip send back ack (may require to tell back file size)
  GET_P2P_SIZE_ACK = 8; // The get request initiator tell file source ip that it get the file size info successfully, once this is received, start sending file
  REPLICA = 9;
}

